--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,6 +54,11 @@
         "stop_token": "cpp",
         "thread": "cpp",
         "cinttypes": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "cstring": "cpp",
+        "buffer": "cpp",
+        "netfwd": "cpp",
+        "bitset": "cpp",
+        "regex": "cpp"
     }
 }
